@@ -1,3 +1,8 @@
+2022-01-23 Benedikt Freisen <b.freisen AT gmx.net>
+
+	* src/SDCCmain.c:
+	  Implement CLI option --include.
+
 2022-01-23 Gabriele Gorla <gorlik@yahoo.com>
 
     * sdcc/src/mos6502/gen.c,
